--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: register-app
-          image: 7842844601/register-app-pipeline:1.0.0-9
+          image: 7842844601/register-app-pipeline:latest
           resources:
             limits:
               memory: "256Mi"
